<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom|top"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_num_of_random_pages" />

        <EditText
            android:id="@+id/editNumberOfRandPages"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" 
            android:maxLength="2">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonSettingsOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_button_yes" />

        <Button
            android:id="@+id/buttonSettingsCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_button_cancel" />

    </LinearLayout>

</LinearLayout>